select boxes in tables need better margin control to avoid the caret being misaligned

--- a/css/material_admin.css
+++ b/css/material_admin.css
@@ -7474,8 +7474,9 @@ table td > .form-item, table td > .ajax-new-content > .form-item {
   margin: 0; }
   table td > .form-item ~ .form-wrapper, table td > .ajax-new-content > .form-item ~ .form-wrapper {
     margin: 25px 0; }
-  table td > .form-item .select-wrapper input.select-dropdown, table td > .ajax-new-content > .form-item .select-wrapper input.select-dropdown {
-    margin: 0; }
+
+table td .form-item .select-wrapper input.select-dropdown {
+  margin: 0; }
 
 .input-field.js-form-type-checkbox label {
   top: 0; }
